// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover renders as expected 1`] = `
<Popover
  id="form-filter"
>
  <Select2
    data={
      Array [
        Object {
          "id": "1",
          "text": "One",
        },
        Object {
          "id": "2",
          "text": "Two",
        },
      ]
    }
    onSelect={[MockFunction]}
    options={
      Object {
        "placeholder": "Choose a form",
      }
    }
    value="2"
  />
  <div
    className="btn-apply-container"
  >
    <Button
      className="btn-apply"
      onClick={[MockFunction]}
    >
      Apply
    </Button>
  </div>
</Popover>
`;

exports[`renders as expected 1`] = `
<OverlayTrigger
  containerPadding={25}
  overlay={
    <Popover
      id="form-filter"
    >
      <Select2
        data={
          Array [
            Object {
              "id": "1",
              "text": "One",
            },
            Object {
              "id": "2",
              "text": "Two",
            },
          ]
        }
        onSelect={[MockFunction]}
        options={
          Object {
            "placeholder": "Choose a form",
          }
        }
        value="2"
      />
      <div
        className="btn-apply-container"
      >
        <Button
          className="btn-apply"
          onClick={[MockFunction]}
        >
          Apply
        </Button>
      </div>
    </Popover>
  }
  placement="bottom"
  rootClose={true}
  trigger="click"
>
  <Button
    className="btn-form-filter"
  >
    Form
  </Button>
</OverlayTrigger>
`;
